Kubernetes/Labs/01-nginx-ingress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  name: nginx-deploy-main
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      containers:
        - image: nginx
          name: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-main
spec:
  selector:
    run: nginx-main
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: nginx-deploy-main
              servicePort: 80
---
